--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
       - name: Install dependencies
-        run: npm install
-      - name: Install slidev
-        run:  npm i -g @slidev/cli
-      - name: Install slidev theme globally
-        run: npm i -g @slidev/theme-default
+        run: pnpm i
       - name: Build
-        run: slidev build --base /materi-PBO-08/ 
+        run: pnpm run build 
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2
         with:
