--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
         run: pnpm i
       - name: Install slidev
         run:  pnpm i -g @slidev/cli
+      - name: Install slidev theme
+        run: pnpm i -g @slidev/theme-default
       - name: Build
         run: slidev build --base /materi-PBO-08/ # ganti N jadi nomor pertemuan (supaya menjadi nama repo)
       - name: Deploy pages
